[package]
name = "dumnati"
version = "0.0.1-dev"
authors = ["Luca Bruno <luca.bruno@coreos.com>"]
edition = "2018"

[dependencies]
actix = "^0.7.9"
actix-web = "^0.7.8"
cincinnati = "^0.1.0"
clap = "^2.32.0"
env_logger = "^0.6.0"
failure = "^0.1.1"
flate2 = "^1.0.1"
futures = "0.1"
itertools = "^0.8.0"
lazy_static = "^1.2.0"
log = "^0.4.3"
reqwest = "^0.9.8"
semver = { version = "^0.9.0", features = [ "serde" ] }
serde = "^1.0.70"
serde_derive = "^1.0.70"
serde_json = "^1.0.22"
structopt = "^0.2.10"
tar = "^0.4.16"
tokio = "0.1"
toml = "^0.4.10"

[patch.crates-io]
cincinnati = { git = "https://github.com/openshift/cincinnati.git", rev = "1b19ec1" }
